--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ mybatis.configuration.map-underscore-to-camel-case=true
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
+
+custom.path.uri_path:/static/images/**
+custom.path.location:/F:/PAUL/Projects/sts/shopManger/uploadedImages/
